Fix alignment of items in reorder modal [SCI-6995] (#4264)

--- a/app/assets/stylesheets/steps/step.scss
+++ b/app/assets/stylesheets/steps/step.scss
@@ -309,6 +309,7 @@
   }
 
   .step-element-header {
+    align-items: center;
     border-bottom: 1px solid $color-concrete;
 
     &:hover:not(.locked) {
